# parse-cabal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  parse-cabal.cabal
app/: Main.hs
app/CLI/Datatypes/: LookupValue.hs  OutputStyle.hs  ReadOption.hs
app/ParseCabal/: Utils.hs  Writer.hs
app/ParseCabal/Datatypes/: LookupValue.hs  OutputStyle.hs  ReadOption.hs
app/Utils/: ParseCabal.hs
