cabal-version:      3.0
name:               parse-cabal
version:            1.0.0
synopsis:
    A simple utility for retrieving information from a .cabal file

description:
    The parse-cabal utility is a tool designed to retrieve information from .cabal files.
    It is primarily intended for use in shell scripts.

    The available output formats are plain text, TOML, and JSON.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Leonid Znamenok
maintainer:         respublica@altlinux.org

category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable parse-cabal
    import:           warnings
    main-is:          Main.hs
    -- other-extensions:
    build-depends:    ,base ^>=4.18.2.1
                      ,simple-cabal >= 0.1.3
                      ,Cabal-syntax
                      ,optparse-applicative
                      ,extra
    hs-source-dirs:   app
    other-modules:    ParseCabal.Utils
                     ,ParseCabal.Writer
                     ,ParseCabal.Datatypes.OutputStyle
                     ,ParseCabal.Datatypes.ReadOption
                     ,ParseCabal.Datatypes.LookupValue
    default-language: Haskell2010
